--- a/Skill_of_Classifier.ipynb
+++ b/Skill_of_Classifier.ipynb
@@ -364,6 +364,7 @@
         "  y_pred = [1 if e > threshold else 0 for e in error_df.reconstruction_error.values]\n",
         "  conf_matrix = confusion_matrix(error_df.true_class, y_pred)\n",
         "  plt.figure(4)\n",
+        "  sns.set(font_scale=2)\n",
         "  sns.heatmap(conf_matrix, xticklabels=LABELS, yticklabels=LABELS, annot=True, fmt=\"d\");\n",
         "  plt.title(\"Confusion matrix for Test, th = %f\" % (th[ix]))\n",
         "  plt.ylabel('True class')\n",
